[gd_scene load_steps=2 format=3 uid="uid://ctbbi6f6qhfjw"]

[ext_resource type="Script" path="res://Scripts/login_page.gd" id="1_e63wq"]

[node name="LoginPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e63wq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="WelcomeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "WELCOME_MESSAGE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoginToSpotifyButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "LOGIN_SPOTIFY"

[node name="WarningLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "PREMUIM_WARN"
autowrap_mode = 3

[node name="BittifyCodeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "BITTIFY_CODE_LABEL"
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="BittifyCodeTextEdit" type="TextEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "BITTIFY_CODE_TEXTEDIT_PLACEHOLDER"

[node name="BittifyCodeGoButton" type="Button" parent="VBoxContainer/HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
text = "BITTIFY_CODE_GO_BUTTON"
clip_text = true

[node name="ErrorText" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "ERROR_TEXT"
